Fixed a bug hiding the nav header behind photos

--- a/src/alitoura.css
+++ b/src/alitoura.css
@@ -36,6 +36,7 @@ body {
     position: fixed;
     padding-top: 0px;
     letter-spacing: -0.01em;
+    z-index: 4;
 }
 
 .header a {
